Edit: minor changes to index

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="info-line flex f-row-nw">
-                        02 Décembre 2019
+                        09 Décembre 2019
                         <div class="icon-container-r flex f-col-nw">
                             <img src="./img/calendar.svg" alt="birthdate" class="info-icon" />
                         </div>
@@ -106,7 +106,7 @@
             <!-- LETTER OBJECT
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
             <p class="letter-object">
-                Objet : Candidature Cybersécurité
+                Objet : Candidature Stage de fin d'études Cybersécurité
             </p>
 
             <!-- LETTER BODY
@@ -119,8 +119,7 @@
                 <!-- WHY
                 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
                 <p class="letter-p">
-                    Je me permets de vous adresser cette lettre, car plusieurs offres de stage, référencées sur le site
-                    web "Jobteaser", m'ont vivement intéressé et je souhaite y candidater.
+                    Je me permets de vous adresser cette lettre, car plusieurs de vos offres de stage, relayées par certains de nos enseignants, m'ont vivement intéressé et je souhaite y candidater.
                 </p>
 
                 <!-- MY SITUATION
@@ -129,8 +128,8 @@
                     Je suis actuellement étudiant en double diplôme: ingénieur Réseaux et Télécommunications et
                     master Sécurité des Systèmes d'Information; à l'Université de Technologie de Troyes. Dans le cadre
                     de ma formation, je recherche un stage de fin d'études pour une période de 6 mois, à partir de
-                    Février 2020. Ce stage me permettrait de parfaire mes connaissances actuelles, notamment dans le
-                    domaine de la sécurité et du développement, ainsi que de conclure mes études de manière fructueuse.
+                    Février 2020. Ce stage me permettrait de parfaire mes connaissances actuelles en matière de cybersécurité, 
+                    ainsi que de conclure mes études de manière fructueuse.
                 </p>
 
                 <!-- ABOUT THE COMPANY
