--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                         <div class="icon-container-l flex f-col-nw">
                             <img src="./img/location.svg" alt="location" class="info-icon" />
                         </div>
-                        13, Grande rue 10270 Courteranges - France
+                        69, My Street 00000 MyCity - France
                     </div>
 
                     <div class="info-line flex f-row-nw">
                         <div class="icon-container-l flex f-col-nw">
                             <img src="./img/phone.svg" alt="phone" class="info-icon" />
                         </div>
-                        +33 6 74 66 20 70
+                        +33 6 xx xx xx xx
                     </div>
 
                     <div class="info-line flex f-row-nw">
@@ -56,11 +56,11 @@
                             <img src="./img/mail-at.svg" alt="mail" class="info-icon" />
                         </div>
                         <a href="mailto:jaufre.lallement@utt.fr">
-                            jaufre.lallement@utt.fr
+                            my.email@outlook.fr
                         </a>
                         <span class="text-separator">|</span>
                         <a href="mailto:lallement.jaufre@gmail.com">
-                            lallement.jaufre@gmail.com
+                            my.email@gmail.com
                         </a>
                     </div>
 
@@ -106,7 +106,7 @@
             <!-- LETTER OBJECT
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
             <p class="letter-object">
-                Objet : Candidature Stage de fin d'études Cybersécurité
+                Objet : Candidature ...
             </p>
 
             <!-- LETTER BODY
@@ -119,17 +119,13 @@
                 <!-- WHY
                 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
                 <p class="letter-p">
-                    Je me permets de vous adresser cette lettre, car plusieurs de vos offres de stage, relayées par certains de nos enseignants, m'ont vivement intéressé et je souhaite y candidater.
+                    Je me permets de vous adresser cette lettre, car plusieurs de vos offres...
                 </p>
 
                 <!-- MY SITUATION
                 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
                 <p class="letter-p">
-                    Je suis actuellement étudiant en double diplôme: ingénieur Réseaux et Télécommunications et
-                    master Sécurité des Systèmes d'Information; à l'Université de Technologie de Troyes. Dans le cadre
-                    de ma formation, je recherche un stage de fin d'études pour une période de 6 mois, à partir de
-                    Février 2020. Ce stage me permettrait de parfaire mes connaissances actuelles en matière de cybersécurité, 
-                    ainsi que de conclure mes études de manière fructueuse.
+                    My situation
                 </p>
 
                 <!-- ABOUT THE COMPANY
@@ -141,11 +137,7 @@
                 <!-- ABOUT ME
                 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
                 <p class="letter-p">
-                    Je suis quelqu'un de sérieux, calme et réfléchi, mais également autodidacte et autonome. Mes
-                    différentes formations, expériences et projets m'ont permis d'obtenir des compétences variées, comme
-                    peut en témoigner mon CV. Je suis donc relativement polyvalent; ainsi que très imaginatif, ce qui me
-                    permet de m'adapter facilement lors de situations diverses, et de résoudre les problèmes auxquels je
-                    suis confronté. Je recherche désormais à obtenir une solide première expérience en Cybersécurité.
+                    About me
                 </p>
 
                 <!-- SALUTATIONS
