--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="icon-container-l flex f-col-nw">
                             <img src="./img/calendar.svg" alt="birthdate" class="info-icon" />
                         </div>
-                        13 Mai 1995
+                        18 Novembre 1990
                     </div>
 
                     <div class="info-line flex f-row-nw">
